fix content jumps while when navebar leaves and come their position

--- a/src/components/scondNavebar/style.css
+++ b/src/components/scondNavebar/style.css
@@ -1,4 +1,3 @@
-.center-items {}
 
 .middle-font-size {
   font-size: 18px;
@@ -44,11 +43,17 @@
 .fixed-navbar {
   position: fixed;
   z-index: 11;
-  top: -20px;
+  top: 0;
   transition: top 0.3s ease-in-out;
   opacity: 1;
   box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
 }
+
+
+.fixed-navbar.show {
+  transform: translateY(0); /* slides down */
+}
+
 
 .tooltip-wrapper {
   position: absolute;
